@@ -1,5 +1,5 @@
-# $Id: Makefile.am,v 1.9 2001-08-06 14:08:05 thep Exp $
-SUBDIRS = thctype thstr thinp thrend thcoll thbrk thwchar thwbrk
+# $Id: Makefile.am,v 1.10 2001-08-08 12:39:19 thep Exp $
+SUBDIRS = thctype thstr thcell thinp thrend thcoll thbrk thwchar thwbrk
 
 MAINTAINERCLEANFILES = Makefile.in
 
@@ -9,6 +9,7 @@ libthai_la_SOURCES = dummy.c
 libthai_la_LIBADD = \
 	$(top_builddir)/src/thctype/libthctype.la \
 	$(top_builddir)/src/thstr/libthstr.la \
+	$(top_builddir)/src/thcell/libthcell.la \
 	$(top_builddir)/src/thinp/libthinp.la \
 	$(top_builddir)/src/thrend/libthrend.la \
 	$(top_builddir)/src/thcoll/libthcoll.la \
